<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Day Clock</string>
    <string name="action_preferences">Settings</string>

    <string name="action_load_save">Save/Restore settings</string>
    <string name="save_dialog_title">Save settings</string>
    <string name="save_dialog_text">Saved settings to</string>
    <string name="save_dialog_fail">**FAILED to save to</string>

    <string name="action_load">Restore settings</string>
    <string name="load_dialog_title">Restore settings</string>
    <string name="load_dialog_text">Restored settings from</string>
    <string name="load_dialog_fail">**FAILED to restore from</string>


    <string name="action_about">About, changes</string>
    <string name="about_dialog_title">About Day Clock</string>
    <string name="about_dialog_version">Day Clock is now at version</string>
    <string name="about_dialog_text">\nAuthor: peterthevicar\n
Open Source at sourceforge and github\n\n
Changes:\n
* v5.02 Update to latest Android Studio version as required by Google.\n
* v5.01 Update to latest Android Studio version as required by Google. Sadly drops support for older Androids.\n
* v5 Add ability to save and restore settings to SD card - thanks Charles R for the idea.\n
* v4.4 Change from chiralcode\'s colour picker to margaritov\'s - allows hex input and colour previews.\n
* v4.3.1 Allow move to SD - thanks to Charles R.\n
* v4.3 Add custom date format and optional last line text - thanks for the suggestions Charles R and Nick M.\n
* v4.2.1 Fix date/time formats for older Android versions\n
* v4.2 Allow display of date as well as, or instead of, time - thanks to Blanche for the suggestion. \n
* v4.1 Define Normal, Contrast and Night colour schemes plus five spare schemes to allow a different colour scheme for each period as requested. Add About, Help and Thanks in menu\n
* v4.0.1 Fixed time display for some KitKat tablets. If you have problems try uninstalling and re-installing.\n
* v4.0 Implement time display. Set size to zero if you don\'t want it displayed at all. Thanks to everyone who made this suggestion. Also moved to Android Studio so slightly more future proof!\n
* v3.2 Implement \'Keep screen on\' option as requested - thanks for the suggestion Charles R.\n
* v3.1 Better default colours (i.e. NOT black text on black background!)\n
* v3 Allow selecting colours for text and background (thanks to chiralcode for the colorpicker)\n
* v2 Thanks to Barb S for pointing out bugs in the handling of time zones. Hopefully now fixed.\n
* v1 First release
    </string>

    <string name="action_thanks">Thanks</string>
    <string name="thanks_dialog_title">Thanks</string>
    <string name="thanks_dialog_text">This app could not have been written without:\n
* My wife Sarah, her patience and her mother Blanche who inspired me to produce this app;\n
* The Open Source community for everything;\n
* Margaritov for the color picker;\n
* The users of the app who have made suggestions, especially Barb S, Alice L, Simon O and Charles R;\n
* A special mention for Simon O who actually sent me donations despite my saying no need!\n
* The Stackoverflow community for many answers;\n
* Google for the excellent Android documentation.
    </string>

    <string name="action_help">Help</string>
    <string name="help_dialog_title">Help with Day Clock</string>
    <string name="help_dialog_text">* What\'s what? The display shows four pieces of information: the first line is for the initial text such as \'It is now\'; the second line tells you the day of the week, e.g Monday; the third line tells you the period within the day, e.g. Afternoon; the fourth line shows the actual time of day, or the date or both, e.g. 9.26 pm or 1 March (for custom formats Google for SimpleDateFormat); the last line can be any text you like, e.g. an emergency phone number or important date.\n\n
* Why \'Early hours\'? The first period is, by default, called \'Early hours\'. This is to get over the problem that the day of the week changes at midnight. It can very confusing if Thursday Night changes to Friday Night at midnight as though a whole day has passed. Day Clock introduces the \'Early hours\' period so it changes from Thursday Night to Friday Early hours. The \'Early hours\' name also helps to emphasise that this is NOT a good time to ring relatives! Of course you can change the name of the midnight period to Night if you don\'t like this approach. Note that you need to have at least ONE of your periods starting at midnight or Day Clock won\'t have a period name to display until the period with the earliest start time begins (it doesn\'t crash it just leaves out the period name altogether).\n\n
* Changing the sizes of the text. The first part of the settings menu (General) allows you to adjust the size of the text on each line individually. If you don\'t want a line to be displayed at all just set its size to 0. For example if showing the actual time is too confusing just set the \'Time text size\' to 0. By default the time size is tiny as it\'s probably not a good idea to show it, but I wanted people to know it\'s available.\n\n
* Changing the background and text colours. Each period during the day can have a different colour scheme (background and text colours). You set up the colour schemes in the second part of the settings menu (Colour schemes). Each colour scheme has a name (Normal, Contrast, Night etc) and each period of the day can choose one of the colour schemes for its display. By default the \'Early hours\' and \'Night\' periods use the Night scheme while all the others use Normal except for Tea Time which uses Contrast. The default settings for the Night theme are designed to minimise the light coming from the display.\n\n
* Changing the names and times of the periods of the day. You can define up to 8 periods in a day. Each period has a name (e.g. Morning) a start and end time, a list of days it occurs and a colour scheme. To disable a period altogether just delete its name. You will normally want periods to end when the next begins (End when next period starts) giving a progression from one period to the next to the next. However you can also set the times to have a period entirely within another period, e.g. Supper time within Evening so you get Evening, Supper Time, and then back to Evening. Day Clock tries to be sensible about such overlapping periods and doesn\'t need the periods to be listed in the order they come in the day.\n\n
* What\'s the point of the \'Period occurs every day\' option? Most periods (e.g. Morning) are going to occur every day so you would use this option. But you may have something like \'Carers visit\' which only happen on some days of the week. In that case you would clear the \'Period occurs every day\' option and just select the days when the carers actually visit. Day Clock will then only display \'Carers visit\' on the days you have selected (and at the time you have defined in the other settings). That would be a good example of a period which might use the Contrast colour scheme to draw attention.\n\n
* Why would I want to save or restore my setting? If you\'ve made a lot of changes to the configuration it\'s a good backup policy to save the settings to your device\'s storage. That way if you have to reset the device, or upgrade to a new device, you can copy the settings by copying the file. It\'s also useful if you want to try out a new configuration: save your current settings first in case it all goes wrong and you can soimply restore the saved set.\n\n
    </string>

    <string name="label_OK">OK</string>
    <string name="label_cancel">Cancel</string>

    <string name="pref_period_text">Period name (blank to disable period)</string>
    <string name="pref_period_colours">Colour scheme for this period</string>
    <string name="pref_period_allDays">Period occurs every day</string>
    <string name="pref_period_start">Start time</string> <!-- Default values: 0 = 1am; -60000 = 12.59am; 39,600,000 = noon i.e. ((H-1)*60+M)*60000 -->
    <string name="pref_period_days">Set active days for this period</string>
    <string name="pref_period_tillNext">End when next period starts</string>
    <string name="pref_period_end">End time</string>

    <!-- Default values: 0 = 1am; -60,000 = 12.59am; 39,600,000 = noon i.e. ((H-1)*60+M)*60000 -->
    <string name="pref_period1">Period 1</string>
    <string name="pref_period1_text_def">Early hours</string>
    <string name="pref_period1_start_def">0</string>
    <string name="pref_period2">Period 2</string>
    <string name="pref_period2_text_def">Morning</string>
    <string name="pref_period2_start_def">28800000</string>
    <string name="pref_period3">Period 3</string>
    <string name="pref_period3_text_def">Afternoon</string>
    <string name="pref_period3_start_def">43200000</string>
    <string name="pref_period4">Period 4</string>
    <string name="pref_period4_text_def">Tea time</string>
    <string name="pref_period4_start_def">58500000</string>
    <string name="pref_period5">Period 5</string>
    <string name="pref_period5_text_def">Evening</string>
    <string name="pref_period5_start_def">64800000</string>
    <string name="pref_period6">Period 6</string>
    <string name="pref_period6_text_def">Night</string>
    <string name="pref_period6_start_def">79200000</string>
    <string name="pref_period7">Period 7</string>
    <string name="pref_period7_text_def"></string>
    <string name="pref_period7_start_def">-3600000</string>
    <string name="pref_period8">Period 8</string>
    <string name="pref_period8_text_def"></string>
    <string name="pref_period8_start_def">-3600000</string>
    <string name="summary_disabled">&lt;not set&gt;></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>