<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.salisburys.dayclock.MainActivity" >


    <item
        android:id="@+id/action_preferences"
        android:orderInCategory="100"
        android:title="@string/action_preferences"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_load_save"
        android:orderInCategory="105"
        android:title="@string/action_load_save"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_help"
        android:orderInCategory="110"
        android:title="@string/action_help"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_thanks"
        android:orderInCategory="120"
        android:title="@string/action_thanks"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="130"
        android:title="@string/action_about"
        app:showAsAction="never"/>

</menu>
